tests/fail/parse-error-003.virtue
a =

# error: parse error
#  --> test.virtue:1:4
#    |
#  1 | a =
#    |    ^ expected expression
#
